feat: RAG Pipeline backed API using fastapi and REST principles.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,8 @@ dependencies = [
     "notebook",
     "numpy",
     "pandas",
+    "fastapi",
+    "uvicorn",
     "pip",
     "pytest",
     "python-dotenv",
