Added Streamlit Chat UI for showcasing work. still needs refactoring components.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,8 @@ dependencies = [
     "pandas",
     "fastapi",
     "uvicorn",
+    "streamlit",
+    "requests",
     "pip",
     "pytest",
     "python-dotenv",
